--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   /* Theme Colors */
-  --primary-50: #f7fef9;
+  --primary-50: #ffffff;
   --primary-100: #edfdf2;
   --primary-200: #d3f9e0;
   --primary-300: #a7f3c0;
@@ -12,7 +12,7 @@
   --primary-500: #34d399;
   --primary-600: #10b981;
   --primary-700: #059669;
-  --primary-800: #05976e;
+  --primary-800: #356658;
   --primary-900: #2fa080;
   
   /* Neutral Colors */
@@ -57,6 +57,11 @@ body {
   background-color: var(--neutral-50);
   color: var(--neutral-900);
   line-height: 1.6;
+}
+
+
+html, body, #root {
+  height: 100%;
 }
 
 code {
